syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "google/protobuf/wrappers.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/commanddata";

package commanddata;

// Command issued by an admin via monoctl to create a new cluster
message CreateCluster {
  // Unique name of the cluster, to be utilized for generating unique labels
  // and symbols, e.g. with metrics.
  string name = 1;
  // Display name of the cluster
  string display_name = 2;
  // DNS name or IP address of the clusters KubeAPIServer
  string api_server_address = 3;
  // Bundle of CA certificates of the cluster, PEM encoded
  bytes ca_cert_bundle = 4;
}

// Command issued by an admin via monoctl to update information about a cluster
message UpdateCluster {
  // Display name of the cluster
  google.protobuf.StringValue display_name = 1;
  // DNS name or IP address of the clusters KubeAPIServer
  google.protobuf.StringValue api_server_address = 2;
  // Bundle of CA certificates of the cluster, PEM encoded
  bytes ca_cert_bundle = 3;
}